--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "liorchamla/faker-prices": "^2.0",
         "mbezhanov/faker-provider-collection": "^2.0",
         "sensio/framework-extra-bundle": "^6.1",
+        "stripe/stripe-php": "^7.77",
+        "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
         "symfony/debug-bundle": "5.1.*",
         "symfony/dotenv": "5.1.*",
